# btc-bot

./: .gitignore  backtestresults.txt  consolidated_build_spec.md  folder_structure.txt  live_state.json  pyproject.toml  requirements.txt  run_backtest.py  run_backtest_bnb.py  run_backtest_eth.py  run_backtest_sol.py  run_backtest_xrp.py  run_live.py  trade_journal_BNB.csv  trade_journal_ETH.csv  trade_journal_SOL.csv  trade_journal_XRP.csv  tuning_changelog.md  visualize_context.py
bot/: __init__.py  config.py  structs.py
bot/backtesting/: __init__.py  engine.py
bot/data_ingestion/: __init__.py  feed_manager.py  market_basket.py  ohlcv_buffer.py
scratch/: analyze_clusters.py  analyze_conviction.py  btc_entry_gate_validation.csv  btc_setups.csv  diagnose_change10.py  investigate_pre_tuning.py  oos_report.txt  run_2_weeks_btc.py  run_anchor_matrix.py  run_change12_sweep.py  run_drive_srflip_sweep.py  run_entry_gate_validation.py  run_heat_cap_sweep.py  run_heat_sweep.py  run_lifecycle_validation.py  run_msb_deep_sweep.py  run_msb_fib_sweep.py  run_oos_test.py  run_sr_flip_sweep.py  walk_forward.py
tests/: test_backtest_integration.py  test_conviction.py  test_data_ingestion.py  test_dynamic_r.py  test_entry_gate.py  test_expiry.py  test_fta_handler.py  test_indicators.py  test_journal_integration.py  test_lifecycle.py  test_market_context.py  test_portfolio_ath.py  test_portfolio_capitulation.py  test_portfolio_drawdown.py  test_portfolio_heat.py  test_portfolio_integration.py  test_setup_detection.py  test_sizer.py  test_stalling.py  test_stop_calculator.py
(+42 files in other folders)
