[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "crypto-trading-bot"
version = "0.1.0"
description = "Automated crypto trading system — Consolidated Build Spec"
requires-python = ">=3.11"
dependencies = []   # no runtime deps yet; add exchange SDK, numpy, etc. when implementing

[project.optional-dependencies]
dev = ["pytest", "mypy", "ruff"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"
