[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "crypto-trading-bot"
version = "0.1.0"
description = "Automated crypto trading system — Consolidated Build Spec"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "ccxt>=4.5.58",
    "ta>=0.11.0",
    "plotly>=6.8.0",
    "requests>=2.32.5",
]

[project.optional-dependencies]
dev = ["pytest", "mypy", "ruff"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"
